syntax = "proto3";

option java_package = "com.juicer.core";
option java_outer_classname = "ShutdownData";

message JuicerTask {
    string url = 1;
    string next = 2;
    bool isFinished = 3;
}

message SingleTask {
    map<string,JuicerTask> task = 1;
}

message JuicerData {
    map<string,string> data = 1;
}

message SingleResult {
    repeated JuicerData result = 1;
}

message SavedData {
    map<string,SingleTask> juicerTaskQueue = 1;
    map<string,string> juicerChain = 2;
    map<string,SingleResult> juicerResultStorage = 3;
}